[package]
name = "rust-buck3t"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
futures-util = "*"
tokio-util = { version = "*", features = ["io"] }