[package]
name = "rust-buck3t"
version = "0.0.1"
edition = "2021"

[dependencies]
# Actix web server
actix-web = "*"
actix-service = "*"

# Serde + JSON
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# Tokio runtime + utils
tokio = { version = "*", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }
futures-util = "*"
tokio-util = { version = "*", features = ["io"] }
dotenvy = "*"

# Auth
jsonwebtoken = "*"   # HS256 + RS256 support
awc = { version = "*", features = ["rustls"] }  # Actix HTTP client for JWKS

[dev-dependencies]
# For integration tests only
reqwest = { version = "*", features = ["json", "rustls-tls"] }
tempfile = "*"
